elk/kibana/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: helm-elk
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      imagePullSecrets:
        - name: chubregcred
      containers:
      - name: kibana
        #image: docker.elastic.co/kibana/kibana:7.5.0
        image: chub.cloud.gov.in/library/kibana:7.16.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yml
          readOnly: true
          subPath: kibana.yml
      volumes:
      - name: config
        configMap:
          name: kibana-cm
